# cnft-onchain-operations

./: Anchor.toml  README.md  package-lock.json  package.json
programs/nft-program/: Cargo.toml
programs/nft-program/src/: lib.rs
tests/: WrappedConnection.ts  nft-program.ts
