[package]
name = "cnft-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver="2"

[lib]
crate-type = ["cdylib", "lib"]
name = "cnft_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
mpl-bubblegum = "=1.0.0"
